[build-system]
requires = ["flit_core>=2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "wily"
authors = [
 { name = "Anthony Shaw", email = "anthonyshaw@apache.org"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "gitpython>=3.1.32,<4.0.0",
    "radon>=5.1,<5.2",
    "click>=7.0,<9.0",
    "nbformat>=5.1.3,<6.0.0",
    "colorlog>=4.0.0,<5.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "plotly>=4.0.0,<6.0.0",
    "progress>=1.4,<2.0",
    "dataclasses; python_version == '3.6'",
]
requires-python = ">=3.6"
dynamic=["version", "description"]

[project.optional-dependencies]
test = [
    "pytest~=7.2",
    "pytest-cov~=4.1.0",
]
dev = [
    "black~=22.6.0",
    "codespell[toml]",
    "mypy~=0.961",
    "ruff~=0.0.277",
    "safety~=2.3.4",
]
# TODO: move here proper deps from `docs/requirements_docs.txt`
doc = []

[project.urls]
Homepage = "https://github.com/tonybaloney/wily"
Documentation = "https://wily.readthedocs.io/en/latest/"

[project.scripts]
wily = "wily.__main__:cli"

[tool.flit.sdist]
include = ["doc/"]
exclude = ["doc/*.html"]

[tool.black]
extend-exclude = '''
/(
    \.git
  | \.tox
  | \.venv
  | \.mypy_cache
  | build/
  | dist
)/
'''
include = '\.pyi?$'
line-length = 88
target-version = ["py37", "py38", "py39", "py310", "py311"]

[tool.codespell]
check-filenames = "True"
ignore-words-list = "fo,wil,someon"
skip = "./.*,*.json,*.po,*.svg"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.pytest.ini_options]
python_files = ["tests.py", "tests_*.py", "test_*.py"]
junit_family = "xunit2"
testpaths = ["test"]
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__",
]
addopts = """
--strict-markers
--strict-config
--cov
--cov-config=setup.cfg
--cov-report=term
--cov-report=xml"""

[tool.ruff]
select = [
    "B",
    "C4",
    "C9",
    "D",
    "E",
    "F",
    "I",
    "PL",
    "S",
    "U",
    "W",
    "YTT",
]
extend-ignore = [
    "D203",
    "D212",
    "D301",
    "E402",
    "E741",
    "F821",
    "F841",
    "PLR2004",
    "PLR5501",
    "PLW2901",
    "S101",
    "S324",
    "UP030",
]
line-length = 217
show-source = true
target-version = "py37"

[tool.ruff.isort]
known-local-folder = ["wily"]

[tool.ruff.mccabe]
max-complexity = 24

[tool.ruff.per-file-ignores]
"test/*" = ["D"]

[tool.ruff.pylint]
max-args = 10
max-branches = 35
max-statements = 100
