[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[project]
name = "wily"
authors = [
 { name = "Anthony Shaw", email = "anthonyshaw@apache.org"},
]
readme = "README.md"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "gitpython>=3.1.32,<4.0.0",
    "click>=7.0,<9.0",
    "nbformat>=5.1.3,<6.0.0",
    "colorlog>=4.0.0,<5.0.0",
    "tabulate>=0.9.0,<1.0.0",
    "plotly>=4.0.0,<6.0.0",
    "rich>=13,<14",
    "ujson>=5.11.0,<6.0.0"
]
requires-python = ">=3.10"
dynamic=["version", "description"]

[dependency-groups]
test = [
    "pytest~=7.2",
    "pytest-cov~=4.1.0",
    "radon>=5.1,<5.2",
]
dev = [
    "maturin>=1.10,<2.0",
    "codespell[toml]",
    "ruff~=0.14",
    "safety~=2.3.4",
]
doc = [
    "sphinx>=7.0,<9.0",
    "sphinx-click>=5.1,<6.0",
    "urllib3>=2.5.0",
]


[project.urls]
Homepage = "https://github.com/tonybaloney/wily"
Documentation = "https://wily.readthedocs.io/en/latest/"

[project.scripts]
wily = "wily.__main__:cli"

[tool.maturin]
bindings = "pyo3"
manifest-path = "backend/Cargo.toml"
module-name = "wily.backend"
python-source = "src"

[tool.uv]
package = true

[tool.codespell]
check-filenames = "True"
ignore-words-list = "fo,wil,someon"
skip = "./.*,*.json,*.po,*.svg"

[tool.pytest.ini_options]
python_files = ["tests.py", "tests_*.py", "test_*.py"]
junit_family = "xunit2"
testpaths = ["test"]
norecursedirs = [
    "*.egg",
    ".eggs",
    "dist",
    "build",
    "docs",
    ".tox",
    ".git",
    "__pycache__",
]
addopts = """
--strict-markers
--strict-config
--cov
--cov-config=setup.cfg
--cov-report=term
--cov-report=xml"""

[tool.ruff]
line-length = 217
target-version = "py310"

[tool.ruff.lint]
select = [
    "B",
    "C4",
    "C9",
    "D",
    "E",
    "F",
    "I",
    "PL",
    "S",
    "U",
    "W",
    "YTT",
]
extend-ignore = [
    "D203",
    "D212",
    "D301",
    "E402",
    "E741",
    "F821",
    "F841",
    "PLR2004",
    "PLR5501",
    "PLW2901",
    "S101",
    "S324",
    "UP030",
]

[tool.ruff.lint.isort]
known-local-folder = ["wily"]

[tool.ruff.lint.mccabe]
max-complexity = 24

[tool.ruff.lint.per-file-ignores]
"test/*" = ["D"]

[tool.ruff.lint.pylint]
max-args = 10
max-branches = 35
max-statements = 100
